Changes with version

 *) Both python 2 and 3 now accept bytes and text as input. All other types now
    raise a TypeError. Before they possibly have been converted to a string,
    depending on the python version and the implementation.

 *) Support for PyPy and Jython is no longer tested, patches are, however,
    accepted.

 *) Minor adaptions for GCC 8

 *) Fix an inconsistency in the jsmin_for_posers function. It was not working
    properly with bang-comments enabled.

 *) Rework the setup and project management system. Add some real tests. Get rid
    of epydoc in favor of sphinx. Adapt to latest sphinx version.


Changes with version 1.0.12

 *) Benchmark updates, dropped slimit benchmarks, because of installation
    trouble

 *) Reworked handling of comments starting with exclamation marks. The matcher
    should no longer get out of sync, even if they appear in the middle of other
    matches.

 *) Handle line terminators before and after regex literals more sensible


Changes with version 1.0.11

 *) Benchmark updates

 *) Lifted max restrictions for CPython and Jython as well.

 *) Lifted max restrictions for pypy versions. Added pypy3 support.
    Submitted by https://github.com/tony


Changes with version 1.0.10

 *) Added support for pypy 2.2

 *) Relint with newer pylint

 *) Fix locale problem with the setup script on python3.
    Submitted by https://github.com/svenstaro


Changes with version 1.0.9

 *) Documentation and benchmark updates


Changes with version 1.0.8

 *) Updated benchmarks

 *) Added command line option for keeping comments starting with an exclamation
    mark (-b)

 *) Added command line option for disabling the C implemention (-p)

 *) Added support for python 3.4

 *) Added support for keeping comments starting with an exclamation mark. This
    feature can be enabled by passing keep_bang_comments=True to the jsmin
    function.


Changes with version 1.0.7
